// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleMain should render a news article correctly 1`] = `
.c2 {
  color: #222222;
  font-family: ReithSerifNewsMedium,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 2rem 0 1rem 0;
  font-size: 1.75em;
  line-height: 2rem;
}

.c5 {
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
  margin: 0;
  font-size: 0.9375em;
  line-height: 1.25rem;
}

.c0 {
  display: -ms-grid;
  display: grid;
}

.c4 {
  display: -ms-grid;
  display: grid;
  background: #F5F3F1;
}

.c3 {
  font-size: 0.875em;
  line-height: 1rem;
  color: #5A5A5A;
  display: block;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c2 {
    font-size: 2em;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5em) {
  .c2 {
    font-size: 2.75em;
    line-height: 3rem;
  }
}

@media (min-width:20em) {
  .c5 {
    font-size: 1em;
    line-height: 1.375rem;
  }
}

@media (max-width:37.4375em) {
  .c0 {
    grid-gap: 0.5rem;
  }
}

@media (min-width:37.5em) {
  .c0 {
    grid-gap: 1rem;
  }
}

@media (max-width:25em) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25em) and (max-width:62.9375em) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (max-width:62.9375em) {
  .c0 {
    -ms-grid-columns: (1fr)[6];
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c0 {
    -ms-grid-columns: 1fr (minmax(0,6.75rem))[8] 1fr;
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
  }
}

@media (min-width:80em) {
  .c0 {
    -ms-grid-columns: 1fr (minmax(0,6.9rem))[10] 1fr;
    grid-template-columns: 1fr repeat(10,minmax(0,6.9rem)) 1fr;
  }
}

@media (max-width:37.4375em) {
  .c4 {
    grid-gap: 0.5rem;
  }
}

@media (min-width:37.5em) {
  .c4 {
    grid-gap: 1rem;
  }
}

@media (max-width:25em) {
  .c4 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25em) and (max-width:62.9375em) {
  .c4 {
    padding: 0 1rem;
  }
}

@media (max-width:62.9375em) {
  .c4 {
    -ms-grid-columns: (1fr)[6];
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c4 {
    -ms-grid-columns: 1fr (minmax(0,6.75rem))[8] 1fr;
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
  }
}

@media (min-width:80em) {
  .c4 {
    -ms-grid-columns: 1fr (minmax(0,6.9rem))[10] 1fr;
    grid-template-columns: 1fr repeat(10,minmax(0,6.9rem)) 1fr;
  }
}

@media (max-width:37.5em) {
  .c1 {
    -ms-grid-column: 1;
    -ms-grid-column-span: 6;
    grid-column: 1 / -1;
  }
}

@media (min-width:37.5em) and (max-width:62.9375em) {
  .c1 {
    -ms-grid-column: 2;
    -ms-grid-column-span: 4;
    grid-column: 2 / -2;
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c1 {
    -ms-grid-column: 3;
    -ms-grid-column-span: 6;
    grid-column: 3 / -3;
  }
}

@media (min-width:80em) {
  .c1 {
    -ms-grid-column: 4;
    -ms-grid-column-span: 6;
    grid-column: 4 / -4;
  }
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c3 {
    line-height: 1.125rem;
  }
}

@media (min-width:37.5em) {
  .c3 {
    font-size: 0.8125em;
  }
}

<main
  role="main"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <h1
        className="c2"
      >
        Article Headline
      </h1>
      <time
        className="c3"
        dateTime="2018-01-01"
      >
        1 January 2018
      </time>
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c1"
    >
      <p
        className="c5"
      >
        A paragraph.
      </p>
    </div>
  </div>
</main>
`;

exports[`ArticleMain should render a persian article correctly 1`] = `
.c2 {
  color: #222222;
  font-family: ReithSerifNewsMedium,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 2rem 0 1rem 0;
  font-size: 1.75em;
  line-height: 2rem;
}

.c5 {
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
  margin: 0;
  font-size: 0.9375em;
  line-height: 1.25rem;
}

.c0 {
  display: -ms-grid;
  display: grid;
}

.c4 {
  display: -ms-grid;
  display: grid;
  background: #F5F3F1;
}

.c3 {
  font-size: 0.875em;
  line-height: 1rem;
  color: #5A5A5A;
  display: block;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c2 {
    font-size: 2em;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5em) {
  .c2 {
    font-size: 2.75em;
    line-height: 3rem;
  }
}

@media (min-width:20em) {
  .c5 {
    font-size: 1em;
    line-height: 1.375rem;
  }
}

@media (max-width:37.4375em) {
  .c0 {
    grid-gap: 0.5rem;
  }
}

@media (min-width:37.5em) {
  .c0 {
    grid-gap: 1rem;
  }
}

@media (max-width:25em) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25em) and (max-width:62.9375em) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (max-width:62.9375em) {
  .c0 {
    -ms-grid-columns: (1fr)[6];
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c0 {
    -ms-grid-columns: 1fr (minmax(0,6.75rem))[8] 1fr;
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
  }
}

@media (min-width:80em) {
  .c0 {
    -ms-grid-columns: 1fr (minmax(0,6.9rem))[10] 1fr;
    grid-template-columns: 1fr repeat(10,minmax(0,6.9rem)) 1fr;
  }
}

@media (max-width:37.4375em) {
  .c4 {
    grid-gap: 0.5rem;
  }
}

@media (min-width:37.5em) {
  .c4 {
    grid-gap: 1rem;
  }
}

@media (max-width:25em) {
  .c4 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25em) and (max-width:62.9375em) {
  .c4 {
    padding: 0 1rem;
  }
}

@media (max-width:62.9375em) {
  .c4 {
    -ms-grid-columns: (1fr)[6];
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c4 {
    -ms-grid-columns: 1fr (minmax(0,6.75rem))[8] 1fr;
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
  }
}

@media (min-width:80em) {
  .c4 {
    -ms-grid-columns: 1fr (minmax(0,6.9rem))[10] 1fr;
    grid-template-columns: 1fr repeat(10,minmax(0,6.9rem)) 1fr;
  }
}

@media (max-width:37.5em) {
  .c1 {
    -ms-grid-column: 1;
    -ms-grid-column-span: 6;
    grid-column: 1 / -1;
  }
}

@media (min-width:37.5em) and (max-width:62.9375em) {
  .c1 {
    -ms-grid-column: 2;
    -ms-grid-column-span: 4;
    grid-column: 2 / -2;
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c1 {
    -ms-grid-column: 3;
    -ms-grid-column-span: 6;
    grid-column: 3 / -3;
  }
}

@media (min-width:80em) {
  .c1 {
    -ms-grid-column: 4;
    -ms-grid-column-span: 6;
    grid-column: 4 / -4;
  }
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c3 {
    line-height: 1.125rem;
  }
}

@media (min-width:37.5em) {
  .c3 {
    font-size: 0.8125em;
  }
}

<main
  role="main"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <h1
        className="c2"
      >
        سرصفحه مقاله
      </h1>
      <time
        className="c3"
        dateTime="2018-01-01"
      >
        1 January 2018
      </time>
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c1"
    >
      <p
        className="c5"
      >
        یک پاراگراف.
      </p>
    </div>
  </div>
</main>
`;

exports[`ArticleMain should render null if no headline block 1`] = `null`;
